<resources>
    <string name="app_name">Sandesh</string>

    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="login">Login</string>
    <string name="new_user">New User? Register Here</string>
    <string name="submit">Submit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="from_location">From</string>
    <string name="to_location">To</string>
    <string name="search">Search</string>
    <string name="find">Find</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_travellers">Search travellers</string>
    <string name="search_senders">Search senders</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="preferred_weight">Preferred Weight</string>
    <string name="acceptable_volume">Acceptable Volume</string>
    <string name="vehicle_train_no">Vehicle/Train no.</string>
    <string name="other_details">Other details</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept terms & conditions]]></string>
    <string name="send_request">Send Request</string>
    <string name="end_journey">End Journey</string>
    <string name="send_parcel">Send a Parcel</string>
    <string name="accept_order">Accept Order</string>
    <string name="reject_order">Reject Order</string>
    <string name="reject">Reject</string>
    <string name="verify">Verify</string>

    <string-array name="preferred_weight_array">
        <item>Up to 250 gms</item>
        <item>250 gms to 500 gms</item>
        <item>500 gms to 1 kg</item>
        <item>1 kg to 2 kg</item>
        <item>2 kg to 3 kg</item>
        <item>3 kg to 5 kg</item>
        <item>5 kg to 7 kg</item>
        <item>7 kg to 8 kg</item>
        <item>8 kg to 10 kg</item>
        <item>10 kg to 12 kg</item>
        <item>12 kg to 15 kg</item>
        <item>15 kg to 20 kg</item>
        <item>20 kg</item>
    </string-array>

    <string-array name="nature_of_good">
        <item>Document</item>
        <item>Article</item>
        <item>Solid</item>
        <item>Liquid</item>
        <item>Gas</item>
        <item>Powder</item>
        <item>Semi-solid</item>
    </string-array>

    <string-array name="type_of_article">
        <item>Documents</item>
        <item>Food products</item>
        <item>Beverages / drinks</item>
        <item>Cloths / Garments / Textile</item>
        <item>Eatables</item>
        <item>Leather products</item>
        <item>Mobile handsets</item>
        <item>Computer / laptops</item>
        <item>Electronic items / goods</item>
        <item>Electrical items</item>
        <item>Chemical</item>
        <item>Watches</item>
        <item>TV</item>
        <item>Dry Fruits</item>
        <item>Furniture</item>
        <item>Kitchen products / items</item>
        <item>Utensils</item>
        <item>Beauty products</item>
        <item>Toys &amp; Baby care</item>
        <item>Sports items</item>
        <item>Stationery</item>
        <item>Equipments</item>
        <item>Industrial safety &amp; equipments</item>
        <item>Metallic products</item>
        <item>Plastic products</item>
        <item>Medicines</item>
        <item>Herbal products</item>
    </string-array>

    <string-array name="type_of_pkg">
        <item>Envelope / papers</item>
        <item>Wooden box</item>
        <item>Plastic bag</item>
        <item>Paper bag</item>
        <item>Metal boxes</item>
        <item>Metal bottles</item>
        <item>Cloth bags</item>
        <item>Plastic bottle</item>
    </string-array>

    <string-array name="mode_of_travel">
        <item>Bike</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Auto</item>
        <item>Tempo</item>
        <item>Car</item>
        <item>Truck</item>
        <item>Cycle</item>
    </string-array>

    <string-array name="delivery_option_array">
        <item>Door to Door Service</item>
        <item>Senders place to Travelers place</item>
        <item>Travelers place to Travelers place</item>
        <item>Travelers place to Receivers place</item>
    </string-array>
</resources>
