<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragment.PlanTravelFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clTopView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/bottom_rectangle_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvPlanTravelTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="Plan a travel"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/clTopView">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingFromCalendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="From" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILFromPincode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingFromCalendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tILFrom">

                <EditText
                    android:id="@+id/etFromPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pincode" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingFromCalendar"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@+id/tILFrom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILFrom" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingToCalendar"
                app:layout_constraintStart_toStartOf="@+id/tILFrom"
                app:layout_constraintTop_toBottomOf="@id/tILFromPincode">

                <EditText
                    android:id="@+id/etTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="To" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILToPincode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingFromCalendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tILTo">

                <EditText
                    android:id="@+id/etToPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pincode" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingToCalendar"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@+id/tILTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILTo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingStartDate"
                app:layout_constraintStart_toStartOf="@+id/tILFrom"
                app:layout_constraintTop_toBottomOf="@id/tILToPincode">

                <EditText
                    android:id="@+id/etStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingStartDate"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="@+id/tILStartDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILStartDate" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingStartDate"
                app:layout_constraintStart_toStartOf="@+id/tILFrom"
                app:layout_constraintTop_toBottomOf="@id/tILStartDate">

                <EditText
                    android:id="@+id/etStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_time" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingStartTime"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_clock"
                app:layout_constraintBottom_toBottomOf="@+id/tILStartTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILStartTime" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingStartDate"
                app:layout_constraintStart_toStartOf="@+id/tILFrom"
                app:layout_constraintTop_toBottomOf="@id/tILStartTime">

                <EditText
                    android:id="@+id/etEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingEndDate"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="@+id/tILEndDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILEndDate" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                app:layout_constraintEnd_toStartOf="@+id/ingStartDate"
                app:layout_constraintStart_toStartOf="@+id/tILFrom"
                app:layout_constraintTop_toBottomOf="@id/tILEndDate">

                <EditText
                    android:id="@+id/etEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_time" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ingEndTime"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_clock"
                app:layout_constraintBottom_toBottomOf="@+id/tILEndTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tILEndTime" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>