<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragment.SearchTravelerFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clTopView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/ic_bg_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvSearchTravelerTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="Search a traveler"
                    android:fontFamily="@font/gotham_light"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/clTopView">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/etFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_light"
                        android:hint="From" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ingFromCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/tILFrom"
                    app:layout_constraintEnd_toEndOf="@+id/tILFrom"
                    app:layout_constraintTop_toTopOf="@+id/tILFrom" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/gotham_light"
                    app:layout_constraintEnd_toEndOf="@+id/tILFrom"
                    app:layout_constraintStart_toStartOf="@+id/tILFrom"
                    app:layout_constraintTop_toBottomOf="@id/tILFrom">

                    <EditText
                        android:id="@+id/etTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_light"
                        android:hint="To" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ingToCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/tILTo"
                    app:layout_constraintEnd_toEndOf="@+id/tILTo"
                    app:layout_constraintTop_toTopOf="@+id/tILTo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/gotham_light"
                    app:layout_constraintEnd_toEndOf="@+id/tILFrom"
                    app:layout_constraintStart_toStartOf="@+id/tILFrom"
                    app:layout_constraintTop_toBottomOf="@id/tILTo">

                    <EditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:fontFamily="@font/gotham_light"
                        android:inputType="date"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ingStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/tILStartDate"
                    app:layout_constraintEnd_toEndOf="@+id/tILStartDate"
                    app:layout_constraintTop_toTopOf="@+id/tILStartDate" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/gotham_light"
                    app:layout_constraintEnd_toEndOf="@+id/ingFromCalendar"
                    app:layout_constraintStart_toStartOf="@+id/tILFrom"
                    app:layout_constraintTop_toBottomOf="@id/tILStartDate">

                    <EditText
                        android:id="@+id/etEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_date"
                        android:fontFamily="@font/gotham_light"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:inputType="date"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ingEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/tILEndDate"
                    app:layout_constraintEnd_toEndOf="@+id/tILEndDate"
                    app:layout_constraintTop_toTopOf="@+id/tILEndDate" />

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:background="@drawable/rounded_button_background"
                    android:paddingStart="@dimen/_36sdp"
                    android:paddingEnd="@dimen/_36sdp"
                    android:text="@string/search"
                    android:fontFamily="@font/gotham_medium"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/ingStartDate"
                    app:layout_constraintStart_toStartOf="@+id/tILFrom"
                    app:layout_constraintTop_toBottomOf="@+id/tILEndDate" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/tvResultCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2 results found"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSortBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sort by"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvResultCount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvResultCount" />

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvResultCount">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/row_order_list" />

                </android.support.v4.widget.NestedScrollView>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>